# dill

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
src/: axis_mapping.cpp  axis_mapping.h  di_listener.cpp  di_listener.h  dill.cpp  dill.h  example.cpp  example2.cpp
src/python/: example.py  pydill.py
tests/: test_axis_mapping.cpp
